--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
-include_path=5;org.zend.php.framework.v2.CONTAINER\u00050;/SharedHosting
+include_path=0;/Hosting Extension
 use_asp_tags_as_php=false
